...


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/spaziomail"
            android:layout_below="@id/spaziofoto"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:singleLine="true"
                android:id="@+id/mailmodifica"
                android:fontFamily="@font/cb"
                android:hint="Cambia la tua e-mail..."
                android:layout_below="@id/mail"
                android:visibility="gone">
            </EditText>

...


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/spaziotelefono"
            android:layout_below="@id/spaziomail"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:id="@+id/telutente"
                android:textColor="@color/neros"
                android:layout_toRightOf="@id/tel"
                android:fontFamily="@font/cb"
                android:hint="CIAO">

            </TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:singleLine="true"
                android:id="@+id/telmodifica"
                android:fontFamily="@font/cb"
                android:hint="Cambia il tuo numero di telefono..."
                android:layout_below="@id/tel"
                android:visibility="gone">
            </EditText>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/spaziopassword"
            android:layout_below="@id/spaziotelefono"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                android:visibility="gone">
            </EditText>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="MODIFICA DATI"
                android:id="@+id/modificadati"
                android:fontFamily="@font/cb"
                android:layout_below="@id/passmodifica2"
                android:textColor="@color/biancos"
                android:onClick="abilitamodifica">

            </Button>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CONFERMA MODIFICA"
                android:fontFamily="@font/cb"
                android:layout_below="@id/passmodifica2"
                android:layout_alignParentRight="true"
                android:id="@+id/confermamodifica"
                android:textColor="@color/biancos"
                android:visibility="gone"
                android:onClick="confermaModificaDati">

            </Button>

...
